--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,6 +3,8 @@ on: [push]
 jobs:
   build_and_static_analysis:
     runs-on: ubuntu-latest
+    container:
+      image: mikaelkevintannaibaho/cmps12_driver_pi:latest
     steps:
       - name: Checkout the repository
         uses: actions/checkout@v3
